[project]
name = "DataProfiler"
version = "1.0.0"
authors = [
  { name="McWilton Chikwenengere", email="mcwilton85@gmail.com" },
]
description = "A Python package for dataset profiling and validation using PySpark."
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mcwilton/dataprofiler"
Issues = "https://github.com/mcwilton/dataprofiler/issues"