[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "DataProfiler"
version = "1.0.0"
authors = [
  { name="McWilton Chikwenengere", email="mcwilton85@gmail.com" },
]
description = "A Python package for dataset profiling and validation using PySpark."
dependencies = ["pyspark>=3.0.0", "fpdf", "pandas", "numpy", "matplotlib", "seaborn"]
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/mcwilton/dataprofiler"
Issues = "https://github.com/mcwilton/dataprofiler/issues"